--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>yoloLight</name>
+  <name>yolo_light</name>
   <version>0.0.0</version>
   <description>The yolo_light package</description>
 
